--- a/assert/css/jumbotron-narrow-monitoring.css
+++ b/assert/css/jumbotron-narrow-monitoring.css
@@ -1,6 +1,6 @@
 /* Space out content a bit */
 body {
-  padding-top: 20px;
+  /*padding-top: 20px;*/
   padding-bottom: 20px;
 }
 
@@ -26,9 +26,9 @@ body {
 
 /* Custom page footer */
 .footer {
-  padding-top: 19px;
+  /*padding-top: 5px;*/
   color: #777;
-  border-top: 1px solid #e5e5e5;
+  /*border-top: 1px solid #e5e5e5;*/
 }
 
 /* Customize container */
@@ -79,4 +79,22 @@ body {
   .jumbotron {
     border-bottom: 0;
   }
+}
+
+/*
+ * description Dashboard
+ */
+.blog-header {
+  /*padding-top: 20px;*/
+  padding-bottom: 10px;
+}
+.blog-title {
+  /*margin-top: 30px;*/
+  margin-bottom: 0;
+  font-size: 60px;
+  font-weight: normal;
+}
+.blog-description {
+  font-size: 20px;
+    color: #999;
 }
